--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -67,6 +67,9 @@ KBUILD_CFLAGS	+= -mcpu=cortex-a53
 endif
 else
 KBUILD_CFLAGS	+= -mgeneral-regs-only
+ifeq ($(CONFIG_ARCH_MSM8998), y)
+KBUILD_CFLAGS	+= -mcpu=cortex-a73.cortex-a53
+endif
 endif
 KBUILD_CFLAGS	+= $(lseinstr) $(vdso32)
 KBUILD_CFLAGS	+= -fno-pic
