arm64/configs: xenial: Bump version to XenialV6
Let's be rid of the PELT branding while we're at it, everyone already knows
what scheduler this kernel runs and XenialV6 looks cleaner.

Signed-off-by: Lunarixus <Nathan@lunarixus.dev>

--- a/arch/arm64/configs/xenial_defconfig
+++ b/arch/arm64/configs/xenial_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-XenialV5-PELT"
+CONFIG_LOCALVERSION="-XenialV6"
 CONFIG_KERNEL_LZ4=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
